Remove schedule from impl